Implemented API partially
